--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
-    <script src="/bundle.js" defer></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width initial-scale=1.0" />
+    <link rel="stylesheet" href="/public/style.css" />
+    <script defer src="/bundle.js"></script>
   </head>
   <body>
-    <div>testing</div>
     <div id="app"></div>
   </body>
 </html>
